--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -11,6 +11,8 @@
 @use './partials/setup';
 @use "./partials/typography";
 @use "./partials/baseStyle";
+@use "./partials/sections";
+@use "./partials/mediaQueries";
 
 // HEADINGS:
 // h1: 28px;
