--- a/styles/styles.css
+++ b/styles/styles.css
@@ -328,6 +328,74 @@ a {
   margin: 0 auto;
 }
 
+.categoryGallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.categoryGallery .item {
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
+  padding: 45px;
+  margin: 50px 25px 25px;
+  border-radius: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.categoryGallery .item img {
+  max-width: 100%;
+  border-radius: 10%;
+  margin-bottom: 20px;
+}
+.categoryGallery .item:hover, .categoryGallery .item:focus {
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+}
+.categoryGallery .itemOne {
+  background-color: #084b6d;
+}
+.categoryGallery .itemTwo {
+  background-color: #084b6d;
+}
+.categoryGallery .itemThree {
+  background-color: #084b6d;
+}
+.categoryGallery .itemFour {
+  background-color: #084b6d;
+}
+
+@media (max-width: 1000px) {
+  /* all of our styles for smaller DESKTOP devices will go within this breakpoint */
+  .item p {
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 800px) {
+  /* all of our styles for TABLET devices will go within this breakpoint */
+}
+@media (max-width: 500px) {
+  /* all of our styles for MOBILE devices will go within this breakpoint */
+}
 body {
   background-color: red;
 }
