--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -1,4 +1,4 @@
-@use 'variables';
+@use "./variables" as *;
 /* import Jakarta Sans font */
 @font-face{
   font-family: "Jakarta Sans";
@@ -31,15 +31,15 @@ html {
 }
 
 body {
-  font-family: variables.$bodyFont;
+  font-family: $bodyFont;
   font-size: 1rem;
-  color: variables.$primary;
+  color: $primary;
 }
 
 h1, h2, h3, h4, blockquote {
-  font-family: variables.$headingFont;
+  font-family: $headingFont;
   font-weight: normal;
-  color: variables.$primary;
+  color: $primary;
   margin: 0;
 }
 
