--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -1,8 +1,21 @@
 //  Have 3 main break points??? - Starting Point!!!! 
 @media (max-width: 1000px) {
   /* all of our styles for smaller DESKTOP devices will go within this breakpoint */
-  .item p{
-    font-size: 0.8rem;
+  .footerFlexContainer {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 100px;
+    .logo {
+      margin-bottom: 20px;
+    }
+    .footerNav {
+      width: 100%;
+      nav{
+         ul {
+        width: auto;
+        }
+      } 
+    }
   }
 }
 
